add support for deleting objects
